package com.ameerdev.models.enums;

public enum SeriesType {
    SERIES, ONE_SHOT
}
