package com.ameerdev.model;

public enum ReadDirection {
    DEFAULT,
    LEFT_TO_RIGHT,
    RIGHT_TO_LEFT,
}
