package com.ameerdev.model.media;

public enum ReleaseType {
    CHAPTER,
    VOLUME,
    ISSUE,
    SPECIAL,
    ONE_SHOT
}
