@startuml
top to bottom direction
skinparam linetype ortho

package "com.ameerdev.models" {
  class Library {
    + Library(long, String, String, List<String>, BookType, ReadDirection, SeriesType):
    + Library():
    - paths: List<String>
    - id: long
    - name: String
    - description: String
    - seriesType: SeriesType
    - readDirection: ReadDirection
    - bookType: BookType
    + builder(): LibraryBuilder
     paths: List<String>
     name: String
     description: String
     readDirection: ReadDirection
     id: long
     bookType: BookType
     seriesType: SeriesType
  }

  class Release {
    + Release(long, int, String, String, LocalDate, ReleaseType, String, long):
    + Release():
    - id: long
    - filePath: String
    - releaseDate: LocalDate
    - releaseType: ReleaseType
    - metadataSourceId: String
    - title: String
    - index: int
    - seriesId: long
    + builder(): ReleaseBuilder
     releaseType: ReleaseType
     index: int
     title: String
     metadataSourceId: String
     filePath: String
     id: long
     seriesId: long
     releaseDate: LocalDate
  }

  class Series {
    + Series(long, long, String, String, String, String, Integer, String):
    + Series():
    - description: String
    - id: long
    - libraryId: long
    - metadataSourceId: String
    - author: String
    - path: String
    - title: String
    - releaseYear: Integer
    + builder(): SeriesBuilder
     description: String
     libraryId: long
     title: String
     author: String
     releaseYear: Integer
     metadataSourceId: Optional<String>
     id: long
     path: String
  }

  class Page {
    + Page():
  }

  class SeriesMetadataJson {
    + SeriesMetadataJson(String, SeriesMetadataJson.Metadata):
    + SeriesMetadataJson():
    - version: String
    - metadata: Metadata
    + builder(): SeriesMetadataJsonBuilder
     version: String
     metadata: Metadata
  }

  class "SeriesMetadataJson.Metadata" as SeriesMetadataJsonMetadata {
    + Metadata(String, String, String, String, Integer, Integer, String, String, Integer, String, String, List<CollectedItem>, String, Integer, String, String):
    + Metadata():
    - type: String
    - publisher: String
    - imprint: String
    - name: String
    - comicid: Integer
    - year: Integer
    - descriptionText: String
    - descriptionFormatted: String
    - volume: Integer
    - booktype: String
    - ageRating: String
    - collects: List<CollectedItem>
    - comicImage: String
    - totalIssues: Integer
    - publicationRun: String
    - status: String
    + builder(): MetadataBuilder
  }

  class "SeriesMetadataJson.CollectedItem" as SeriesMetadataJsonCollectedItem {
    + CollectedItem(String, String, String, String):
    + CollectedItem():
    - series: String
    - comicid: String
    - issueid: String
    - issues: String
    + builder(): CollectedItemBuilder
  }

  class SeriesIdentifier {
    + SeriesIdentifier(String?, String?, Integer?):
    + SeriesIdentifier():
    - title: String?
    - metadataSourceId: String?
    - year: Integer?
    + equals(Object): boolean
    # canEqual(Object): boolean
    + hashCode(): int
    + toString(): String
    + builder(): SeriesIdentifierBuilder
     metadataSourceId: Optional<String>
     title: Optional<String>
     year: Optional<Integer>
  }
}

package "com.ameerdev.models.enums" {
  enum BookType << enumeration >> {
    + BookType():
    + valueOf(String): BookType
    + values(): BookType[]
  }

  enum ReadDirection << enumeration >> {
    + ReadDirection():
    + values(): ReadDirection[]
    + valueOf(String): ReadDirection
  }

  enum ReleaseType << enumeration >> {
    + ReleaseType():
    + values(): ReleaseType[]
    + valueOf(String): ReleaseType
  }

  enum SeriesType << enumeration >> {
    - SeriesType(String):
    + valueOf(String): SeriesType
    + toString(): String
    + values(): SeriesType[]
  }
}

package "com.ameerdev.resource" {
  class LibraryResourceV1 {
    + LibraryResourceV1():
    + scanLibrary(long): Response
    + createNewLibrary(CreateLibraryDTO): Response
    + updateLibrary(long, CreateLibraryDTO): Response
    + deleteLibrary(long): Response
    + getLibraryById(long): Response
     allLibraries: Response
  }

  class ReleaseResourceV1 {
    + ReleaseResourceV1():
    + getAllReleases(long): Response
    + refreshMetadata(long): Response
    + downloadReleaseFile(long): Response
  }

  class SeriesResourceV1 {
    + SeriesResourceV1():
    + refreshMetadata(int): Response
    + getAllSeries(long, int, int, String): Response
  }
}

package "com.ameerdev.resource.dto.request" {
  entity CreateLibraryDTO << record >> {
    + CreateLibraryDTO(String, String, ReadDirection, BookType, SeriesType, List<String>):
    + seriesType(): SeriesType
    + libraryType(): BookType
    + readDirection(): ReadDirection
    + description(): String
    + name(): String
    + paths(): List<String>
  }
}

package "com.ameerdev.resource.dto.response" {
  entity LibraryDTO << record >> {
    + LibraryDTO(Long, String, String, List<String>):
    + id(): Long
    + description(): String
    + paths(): List<String>
    + name(): String
  }
}

package "com.ameerdev.resource.dto.mappers" {
  class RequestMappers {
    + RequestMappers():
    + toLibrary(CreateLibraryDTO): Library
  }
}

package "com.ameerdev.repositories.jooq" {
  class LibraryRepositoryImpl implements com.ameerdev.repositories.LibraryRepository {
    + LibraryRepositoryImpl():
  }

  class ReleaseRepositoryImpl implements com.ameerdev.repositories.ReleaseRepository {
    + ReleaseRepositoryImpl():
    - fillRecordFromDomainWithId(Release, ReleaseRecord): void
    - fillRecordFromDomain(Release, ReleaseRecord): void
  }

  class SeriesRepositoryImpl implements com.ameerdev.repositories.SeriesRepository {
    + SeriesRepositoryImpl():
    - fillFromDomain(Series, SeriesRecord): void
  }
}

package "com.ameerdev.repositories" {
  interface LibraryRepository << interface >> {
    + update(long, Library): void
    + fetchLibraryById(long): Optional<Library>
    + create(Library): Optional<Library>
    + findAllLibraries(): List<Library>
    + fetchLibraryPaths(long): List<String>
    + deleteById(long): void
  }

  interface ReleaseRepository << interface >> {
    + createBatch(Collection<Release>): List<Release>
    + deleteByIds(Collection<Long>): void
    + findBySeriesId(long): List<Release>
    + deleteById(long): boolean
    + findAll(): List<Release>
    + findByMetadataSourceId(String): Optional<Release>
    + create(Release): Optional<Release>
    + updateBatch(Collection<Release>): void
    + update(Release): Optional<Release>
    + findById(long): Optional<Release>
  }

  interface SeriesRepository << interface >> {
    + findAll(): List<Series>
    + create(Series): Optional<Series>
    + deleteByIds(Collection<Long>): void
    + findSeriesByLibraryId(long): List<Series>
    + deleteBySeriesPaths(Collection<String>): void
    + findSeriesPathsByLibraryId(long): Set<String>
    + deleteById(long): boolean
    + findSeriesByMetadataSourceId(String): Optional<Series>
    + fetchSeriesById(Long): Optional<Series>
    + update(Series): Optional<Series>
  }
}

package "com.ameerdev.service" {
  class LibraryScannerService {
    + LibraryScannerService():
    - findAllReleaseFiles(Series): Set<Path>
    - scanSeries(Library, Series): void
    + scanLibrary(Library): void
    - getSeriesPaths(Path): Set<String>
    - shouldSeriesPathBeVisible(Path): boolean
    - fetchSeriesScanData(Library): SeriesScanData
    + hasSupportedExtension(Path): boolean
    - handleNewSeries(SeriesScanData, Library): void
    - scanSeries(Library, Path): void
    - runSeriesScans(Library, SeriesScanData): CompletableFuture<Void>
    - handleExistingSeries(SeriesScanData, Library): void
    - handleRemovedSeries(SeriesScanData): void
    - containsSupportedFileInDirectory(Path): boolean
    + scanLibrary(Long): void
  }

  class LibraryService {
    + LibraryService():
    + updateLibrary(long, Library): void
    + createNewLibrary(Library): Optional<Library>
    + deleteLibrary(long): void
    + getLibraryById(long): Optional<Library>
     allLibraries: List<Library>
  }

  class ReleaseService {
    + ReleaseService():
    + getReleaseFilePath(long): Optional<Path>
    + getReleasesBySeriesId(long): List<Release>
  }

  class SeriesService {
    + SeriesService():
    + getSeriesByLibraryId(long): List<Series>
     allSeries: List<Series>
  }

  class ParserService {
    + ParserService():
    + parseSeriesName(String?): SeriesIdentifier
  }

  class FileHandler {
    - FileHandler():
    + list(Path): Stream<Path>
    + isDirectory(Path): boolean
    + walk(Path): Stream<Path>
    + isHidden(Path): boolean
    + isReadable(Path): boolean
    + isRegularFile(Path): boolean
  }

  entity SeriesScanData << record >> {
    + SeriesScanData(Set<String>, List<Series>):
    + fileSystemSeriesPaths(): Set<String>
    + repoSeriesPaths(): List<Series>
  }
}

package "com.ameerdev.repositories.jooq.mapper" {
  class LibraryMapper {
    + LibraryMapper(List<String>):
    + map(Record): Library?
  }

  class LibraryWithPathsMapper {
    + LibraryWithPathsMapper():
    - getPathsList(Record): List<String>
    + map(Record): Library?
  }

  class ReleaseMapper {
    + ReleaseMapper():
    + map(Record): Release?
  }

  class SeriesMapper {
    + SeriesMapper():
    + map(Record): Series?
  }

  class EnumConverters {
    + EnumConverters():
  }
}

package "com.ameerdev.metadata_provider" {
  interface MetadataProvider << interface >> {
    + metadataType(): BookType
    + search(SeriesIdentifier): Optional<String>
    + fetchSeriesMetadata(String): Optional<Series>
    + fetchReleaseMetadata(String?, int): Optional<Release>
  }

  class MetadataProviderFactory {
    - mangaProvider: MangaUpdatesMetadataProvider
    - comicProvider: ComicVineMetadataProvider
    + getDefaultProvider(BookType): MetadataProvider
  }
}

package "com.ameerdev.metadata_provider.comicvine" {
  class ComicVineMetadataProvider implements com.ameerdev.metadata_provider.MetadataProvider {
  }
}

package "com.ameerdev.metadata_provider.comicvine.client.api" {
  interface SeriesApi << interface >>
}

package "com.ameerdev.metadata_provider.mangaupdates" {
  class MangaUpdatesMetadataProvider implements com.ameerdev.metadata_provider.MetadataProvider {
    proxy: MangaUpdatesMetadataProxy
  }

  class MangaUpdatesMetadataProxy {
    + searchSeries(String, String): SeriesSearchResponseV1
    + getSeriesById(Long): SeriesModelV1
  }
}

ComicVineMetadataProvider     ..>  BookType
ComicVineMetadataProvider     ..>  Release
ComicVineMetadataProvider     ..>  Series
ComicVineMetadataProvider     ..>  SeriesIdentifier
CreateLibraryDTO              ..>  BookType
CreateLibraryDTO              ..>  ReadDirection
CreateLibraryDTO              ..>  SeriesType
Library                       ..>  BookType
Library                       ..>  ReadDirection
Library                       ..>  SeriesType
LibraryMapper                 ..>  Library
LibraryRepository             ..>  Library
LibraryRepositoryImpl         ..>  Library
LibraryRepositoryImpl         ..>  LibraryMapper
LibraryRepositoryImpl         ..>  LibraryWithPathsMapper
LibraryResourceV1             ..>  CreateLibraryDTO
LibraryResourceV1             ..>  Library
LibraryResourceV1             ..>  LibraryScannerService
LibraryResourceV1             ..>  LibraryService
LibraryResourceV1             ..>  RequestMappers
LibraryScannerService         ..>  FileHandler
LibraryScannerService         ..>  Library
LibraryScannerService         ..>  LibraryRepository
LibraryScannerService         ..>  MetadataProvider
LibraryScannerService         ..>  MetadataProviderFactory
LibraryScannerService         ..>  ParserService
LibraryScannerService         ..>  Release
LibraryScannerService         ..>  ReleaseRepository
LibraryScannerService         ..>  ReleaseType
LibraryScannerService         ..>  Series
LibraryScannerService         ..>  SeriesIdentifier
LibraryScannerService         ..>  SeriesRepository
LibraryScannerService         ..>  SeriesScanData
LibraryService                ..>  Library
LibraryService                ..>  LibraryRepository
LibraryService                ..>  LibraryScannerService
LibraryWithPathsMapper        ..>  Library
MangaUpdatesMetadataProvider  ..>  BookType
MangaUpdatesMetadataProvider  ..>  MangaUpdatesMetadataProxy
MangaUpdatesMetadataProvider  ..>  Series
MangaUpdatesMetadataProvider  ..>  SeriesIdentifier
MetadataProvider              ..>  BookType
MetadataProvider              ..>  Release
MetadataProvider              ..>  Series
MetadataProvider              ..>  SeriesIdentifier
MetadataProviderFactory       ..>  BookType
MetadataProviderFactory       ..>  MetadataProvider
MetadataProviderFactory      *--> MangaUpdatesMetadataProvider
MetadataProviderFactory      *--> ComicVineMetadataProvider
SeriesMetadataJson           *--> SeriesMetadataJsonMetadata
SeriesMetadataJsonMetadata   *--> SeriesMetadataJsonCollectedItem
ParserService                 ..>  SeriesIdentifier
Release                       ..>  ReleaseType
ReleaseMapper                 ..>  Release
ReleaseRepository             ..>  Release
ReleaseRepositoryImpl         ..>  Release
ReleaseResourceV1             ..>  ReleaseService
ReleaseService                ..>  Release
ReleaseService                ..>  ReleaseRepository
RequestMappers                ..>  CreateLibraryDTO
RequestMappers                ..>  Library
SeriesMapper                  ..>  Series
SeriesRepository              ..>  Series
SeriesRepositoryImpl          ..>  Series
SeriesResourceV1              ..>  Series
SeriesResourceV1              ..>  SeriesService
SeriesScanData                ..>  Series
SeriesService                 ..>  Series
SeriesService                 ..>  SeriesRepository
@enduml